%% Player Override & Profile Schema ERD
%% Updated: 2026-01-16 (manual_players 삭제됨)

erDiagram
    wsop_players ||--o{ profile_images : "wsop_player_id"
    gfx_players ||--o{ profile_images : "gfx_player_id"
    wsop_players ||--o{ player_overrides : "wsop_player_id"
    gfx_players ||--o{ player_overrides : "gfx_player_id"
    wsop_players ||--o{ player_link_mapping : "wsop_player_id"
    gfx_players ||--o{ player_link_mapping : "gfx_player_id"

    profile_images {
        uuid id PK
        uuid wsop_player_id FK "nullable"
        uuid gfx_player_id FK "nullable"
        manual_image_type image_type
        text file_path
        text url
        manual_storage_type storage_type
        boolean is_primary
        text notes "CHECK: wsop OR gfx required"
    }

    player_overrides {
        uuid id PK
        uuid wsop_player_id FK "nullable"
        uuid gfx_player_id FK "nullable"
        manual_override_field field_name
        text override_value
        text original_value
        integer priority
        boolean active
        text notes "CHECK: wsop OR gfx required"
    }

    player_link_mapping {
        uuid id PK
        uuid wsop_player_id FK
        uuid gfx_player_id FK
        manual_match_method match_method
        numeric match_confidence
        boolean is_verified
        text notes "gfx<->wsop 교집합 연결"
    }

    wsop_players {
        uuid id PK
        text wsop_player_id UK
        text name
        text profile_image_url
    }

    gfx_players {
        uuid id PK
        text player_hash UK
        text name
    }

    %% 삭제된 테이블 (참고용)
    %% manual_players - 삭제됨
    %% manual_audit_log - 삭제됨
